target/generated-sources/antlr4/medPatternsParser.java
// Generated from medPatterns.g4 by ANTLR 4.2.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class medPatternsParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ID=1, INT=2, SPECIAL_CHAR=3, SPECIAL_CHAR_1=4, SpecialSymbol1=5, SpecialSymbol2=6, 
		SpecialSymbol3=7, SpecialSymbol4=8, SpecialSymbol5=9, SpecialSymbol6=10, 
		WS=11;
	public static final String[] tokenNames = {
		"<INVALID>", "ID", "INT", "SPECIAL_CHAR", "'-'", "'MED'", "'FREQ'", "'MODE'", 
		"'DRT'", "'UNIT'", "'REASON'", "WS"
	};
	public static final int
		RULE_prog = 0, RULE_program = 1, RULE_chunk = 2, RULE_island = 3, RULE_dg_list = 4, 
		RULE_dg = 5, RULE_dg_M_modes_SET = 6, RULE_dg_S_modes_SET = 7, RULE_mod_set_list = 8, 
		RULE_dg_L_MOD = 9, RULE_dg_R_MOD = 10, RULE_mod_set = 11, RULE_dose = 12, 
		RULE_med = 13, RULE_freq = 14, RULE_modes = 15, RULE_drt = 16, RULE_unit = 17, 
		RULE_reason = 18, RULE_water = 19;
	public static final String[] ruleNames = {
		"prog", "program", "chunk", "island", "dg_list", "dg", "dg_M_modes_SET", 
		"dg_S_modes_SET", "mod_set_list", "dg_L_MOD", "dg_R_MOD", "mod_set", "dose", 
		"med", "freq", "modes", "drt", "unit", "reason", "water"
	};

	@Override
	public String getGrammarFileName() { return "medPatterns.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	public String getTokenErrorDisplay(Token t) {
		return t.toString();
	}

	Stack paraphrases = new Stack();

	public String getErrorMessage(RecognitionException e,
	String[] tokenNames)
	{
		String msg = super.getErrorMessage(e, tokenNames);
		if ( paraphrases.size()>0 ) {
		String paraphrase = (String)paraphrases.peek();
		msg = msg+" "+paraphrase;
		}
		return msg;
	}


	public medPatternsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); program(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ChunkContext chunk() {
			return getRuleContext(ChunkContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		return program(0);
	}

	private ProgramContext program(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ProgramContext _localctx = new ProgramContext(_ctx, _parentState);
		ProgramContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_program, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(43); chunk();
			}
			_ctx.stop = _input.LT(-1);
			setState(49);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ProgramContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_program);
					setState(45);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(46); chunk();
					}
					} 
				}
				setState(51);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ChunkContext extends ParserRuleContext {
		public WaterContext water() {
			return getRuleContext(WaterContext.class,0);
		}
		public IslandContext island() {
			return getRuleContext(IslandContext.class,0);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).enterChunk(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).exitChunk(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_chunk);
		try {
			setState(54);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52); water();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(53); island();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IslandContext extends ParserRuleContext {
		public Dg_listContext dg_list() {
			return getRuleContext(Dg_listContext.class,0);
		}
		public IslandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_island; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).enterIsland(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).exitIsland(this);
		}
	}

	public final IslandContext island() throws RecognitionException {
		IslandContext _localctx = new IslandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_island);
		 paraphrases.push("in island"); 
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56); dg_list();
			}
			 paraphrases.pop(); 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dg_listContext extends ParserRuleContext {
		public DgContext dg() {
			return getRuleContext(DgContext.class,0);
		}
		public Dg_listContext dg_list() {
			return getRuleContext(Dg_listContext.class,0);
		}
		public Dg_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dg_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).enterDg_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).exitDg_list(this);
		}
	}

	public final Dg_listContext dg_list() throws RecognitionException {
		Dg_listContext _localctx = new Dg_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dg_list);
		 paraphrases.push("in dg_list"); 
		try {
			setState(62);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(58); dg();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(59); dg();
				setState(60); dg_list();
				}
				break;
			}
			 paraphrases.pop(); 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DgContext extends ParserRuleContext {
		public Dg_M_modes_SETContext dg_M_modes_SET() {
			return getRuleContext(Dg_M_modes_SETContext.class,0);
		}
		public Dg_S_modes_SETContext dg_S_modes_SET() {
			return getRuleContext(Dg_S_modes_SETContext.class,0);
		}
		public DgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).enterDg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).exitDg(this);
		}
	}

	public final DgContext dg() throws RecognitionException {
		DgContext _localctx = new DgContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dg);
		 paraphrases.push("in dg"); 
		try {
			setState(66);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(64); dg_S_modes_SET();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65); dg_M_modes_SET();
				}
				break;
			}
			 paraphrases.pop(); 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dg_M_modes_SETContext extends ParserRuleContext {
		public MedContext med;
		public Mod_set_listContext mod_set_list;
		public Dg_L_MODContext dg_L_MOD;
		public Dg_R_MODContext dg_R_MOD;
		public Dg_L_MODContext dg_L_MOD() {
			return getRuleContext(Dg_L_MODContext.class,0);
		}
		public Dg_R_MODContext dg_R_MOD() {
			return getRuleContext(Dg_R_MODContext.class,0);
		}
		public Mod_set_listContext mod_set_list() {
			return getRuleContext(Mod_set_listContext.class,0);
		}
		public MedContext med() {
			return getRuleContext(MedContext.class,0);
		}
		public Dg_M_modes_SETContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dg_M_modes_SET; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).enterDg_M_modes_SET(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).exitDg_M_modes_SET(this);
		}
	}

	public final Dg_M_modes_SETContext dg_M_modes_SET() throws RecognitionException {
		Dg_M_modes_SETContext _localctx = new Dg_M_modes_SETContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dg_M_modes_SET);
		 paraphrases.push("in dg_M_modes_SET"); 
		try {
			setState(82);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68); ((Dg_M_modes_SETContext)_localctx).med = med();
				setState(69); ((Dg_M_modes_SETContext)_localctx).mod_set_list = mod_set_list();
				System.out.println("found med mod_set_list: " + (((Dg_M_modes_SETContext)_localctx).med!=null?_input.getText(((Dg_M_modes_SETContext)_localctx).med.start,((Dg_M_modes_SETContext)_localctx).med.stop):null) + " "  + (((Dg_M_modes_SETContext)_localctx).mod_set_list!=null?_input.getText(((Dg_M_modes_SETContext)_localctx).mod_set_list.start,((Dg_M_modes_SETContext)_localctx).mod_set_list.stop):null));
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72); ((Dg_M_modes_SETContext)_localctx).dg_L_MOD = dg_L_MOD();
				setState(73); ((Dg_M_modes_SETContext)_localctx).med = med();
				setState(74); ((Dg_M_modes_SETContext)_localctx).mod_set_list = mod_set_list();
				System.out.println("found dg_L_MOD med mod_set_list: " + (((Dg_M_modes_SETContext)_localctx).dg_L_MOD!=null?_input.getText(((Dg_M_modes_SETContext)_localctx).dg_L_MOD.start,((Dg_M_modes_SETContext)_localctx).dg_L_MOD.stop):null) + " " + (((Dg_M_modes_SETContext)_localctx).med!=null?_input.getText(((Dg_M_modes_SETContext)_localctx).med.start,((Dg_M_modes_SETContext)_localctx).med.stop):null)
					+ " " + (((Dg_M_modes_SETContext)_localctx).mod_set_list!=null?_input.getText(((Dg_M_modes_SETContext)_localctx).mod_set_list.start,((Dg_M_modes_SETContext)_localctx).mod_set_list.stop):null)
				);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(77); ((Dg_M_modes_SETContext)_localctx).med = med();
				setState(78); ((Dg_M_modes_SETContext)_localctx).mod_set_list = mod_set_list();
				setState(79); ((Dg_M_modes_SETContext)_localctx).dg_R_MOD = dg_R_MOD();
				System.out.println("found med mod_set_list dg_R_MOD: " + (((Dg_M_modes_SETContext)_localctx).med!=null?_input.getText(((Dg_M_modes_SETContext)_localctx).med.start,((Dg_M_modes_SETContext)_localctx).med.stop):null) + " "  + (((Dg_M_modes_SETContext)_localctx).mod_set_list!=null?_input.getText(((Dg_M_modes_SETContext)_localctx).mod_set_list.start,((Dg_M_modes_SETContext)_localctx).mod_set_list.stop):null)
					+ " " + (((Dg_M_modes_SETContext)_localctx).dg_R_MOD!=null?_input.getText(((Dg_M_modes_SETContext)_localctx).dg_R_MOD.start,((Dg_M_modes_SETContext)_localctx).dg_R_MOD.stop):null)
				);
				}
				break;
			}
			 paraphrases.pop(); 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dg_S_modes_SETContext extends ParserRuleContext {
		public MedContext med;
		public Dg_R_MODContext dg_R_MOD;
		public Dg_L_MODContext dg_L_MOD;
		public Dg_L_MODContext dg_L_MOD() {
			return getRuleContext(Dg_L_MODContext.class,0);
		}
		public Dg_R_MODContext dg_R_MOD() {
			return getRuleContext(Dg_R_MODContext.class,0);
		}
		public MedContext med() {
			return getRuleContext(MedContext.class,0);
		}
		public Dg_S_modes_SETContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dg_S_modes_SET; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).enterDg_S_modes_SET(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).exitDg_S_modes_SET(this);
		}
	}

	public final Dg_S_modes_SETContext dg_S_modes_SET() throws RecognitionException {
		Dg_S_modes_SETContext _localctx = new Dg_S_modes_SETContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dg_S_modes_SET);
		 paraphrases.push("in dg_S_modes_SET"); 
		try {
			setState(100);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84); ((Dg_S_modes_SETContext)_localctx).med = med();
				System.out.println("found med " + (((Dg_S_modes_SETContext)_localctx).med!=null?_input.getText(((Dg_S_modes_SETContext)_localctx).med.start,((Dg_S_modes_SETContext)_localctx).med.stop):null));
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87); ((Dg_S_modes_SETContext)_localctx).med = med();
				setState(88); ((Dg_S_modes_SETContext)_localctx).dg_R_MOD = dg_R_MOD();
				System.out.println("found med dg_R_MOD: " + (((Dg_S_modes_SETContext)_localctx).med!=null?_input.getText(((Dg_S_modes_SETContext)_localctx).med.start,((Dg_S_modes_SETContext)_localctx).med.stop):null) + " " + (((Dg_S_modes_SETContext)_localctx).dg_R_MOD!=null?_input.getText(((Dg_S_modes_SETContext)_localctx).dg_R_MOD.start,((Dg_S_modes_SETContext)_localctx).dg_R_MOD.stop):null));
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(91); ((Dg_S_modes_SETContext)_localctx).dg_L_MOD = dg_L_MOD();
				setState(92); ((Dg_S_modes_SETContext)_localctx).med = med();
				System.out.println("found dg_L_MOD med: " + (((Dg_S_modes_SETContext)_localctx).dg_L_MOD!=null?_input.getText(((Dg_S_modes_SETContext)_localctx).dg_L_MOD.start,((Dg_S_modes_SETContext)_localctx).dg_L_MOD.stop):null) + " " + (((Dg_S_modes_SETContext)_localctx).med!=null?_input.getText(((Dg_S_modes_SETContext)_localctx).med.start,((Dg_S_modes_SETContext)_localctx).med.stop):null));
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(95); ((Dg_S_modes_SETContext)_localctx).dg_L_MOD = dg_L_MOD();
				setState(96); ((Dg_S_modes_SETContext)_localctx).med = med();
				setState(97); ((Dg_S_modes_SETContext)_localctx).dg_R_MOD = dg_R_MOD();
				System.out.println("found dg_L_MOD med: " + (((Dg_S_modes_SETContext)_localctx).dg_L_MOD!=null?_input.getText(((Dg_S_modes_SETContext)_localctx).dg_L_MOD.start,((Dg_S_modes_SETContext)_localctx).dg_L_MOD.stop):null) + " " + (((Dg_S_modes_SETContext)_localctx).med!=null?_input.getText(((Dg_S_modes_SETContext)_localctx).med.start,((Dg_S_modes_SETContext)_localctx).med.stop):null)
					+ " " + (((Dg_S_modes_SETContext)_localctx).dg_R_MOD!=null?_input.getText(((Dg_S_modes_SETContext)_localctx).dg_R_MOD.start,((Dg_S_modes_SETContext)_localctx).dg_R_MOD.stop):null)
				);
				}
				break;
			}
			 paraphrases.pop(); 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mod_set_listContext extends ParserRuleContext {
		public Mod_set_listContext mod_set_list() {
			return getRuleContext(Mod_set_listContext.class,0);
		}
		public Mod_setContext mod_set(int i) {
			return getRuleContext(Mod_setContext.class,i);
		}
		public List<Mod_setContext> mod_set() {
			return getRuleContexts(Mod_setContext.class);
		}
		public Mod_set_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mod_set_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).enterMod_set_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).exitMod_set_list(this);
		}
	}

	public final Mod_set_listContext mod_set_list() throws RecognitionException {
		Mod_set_listContext _localctx = new Mod_set_listContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mod_set_list);
		 paraphrases.push("in mod_set_list"); 
		try {
			setState(108);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102); mod_set();
				setState(103); mod_set();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105); mod_set();
				setState(106); mod_set_list();
				}
				break;
			}
			 paraphrases.pop(); 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dg_L_MODContext extends ParserRuleContext {
		public DoseContext dose() {
			return getRuleContext(DoseContext.class,0);
		}
		public DrtContext drt() {
			return getRuleContext(DrtContext.class,0);
		}
		public ModesContext modes() {
			return getRuleContext(ModesContext.class,0);
		}
		public FreqContext freq() {
			return getRuleContext(FreqContext.class,0);
		}
		public Dg_L_MODContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dg_L_MOD; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).enterDg_L_MOD(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).exitDg_L_MOD(this);
		}
	}

	public final Dg_L_MODContext dg_L_MOD() throws RecognitionException {
		Dg_L_MODContext _localctx = new Dg_L_MODContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_dg_L_MOD);
		 paraphrases.push("in dg_L_MOD"); 
		try {
			setState(124);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110); dose();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111); modes();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112); drt();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(113); drt();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(114); freq();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(115); freq();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(116); dose();
				setState(117); freq();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(119); dose();
				setState(120); freq();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(122); freq();
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(123); drt();
				}
				break;
			}
			 paraphrases.pop(); 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dg_R_MODContext extends ParserRuleContext {
		public Mod_setContext mod_set() {
			return getRuleContext(Mod_setContext.class,0);
		}
		public Dg_R_MODContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dg_R_MOD; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).enterDg_R_MOD(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).exitDg_R_MOD(this);
		}
	}

	public final Dg_R_MODContext dg_R_MOD() throws RecognitionException {
		Dg_R_MODContext _localctx = new Dg_R_MODContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_dg_R_MOD);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); mod_set();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mod_setContext extends ParserRuleContext {
		public DoseContext dose() {
			return getRuleContext(DoseContext.class,0);
		}
		public TerminalNode INT() { return getToken(medPatternsParser.INT, 0); }
		public ModesContext modes() {
			return getRuleContext(ModesContext.class,0);
		}
		public DrtContext drt() {
			return getRuleContext(DrtContext.class,0);
		}
		public List<FreqContext> freq() {
			return getRuleContexts(FreqContext.class);
		}
		public ReasonContext reason() {
			return getRuleContext(ReasonContext.class,0);
		}
		public FreqContext freq(int i) {
			return getRuleContext(FreqContext.class,i);
		}
		public Mod_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mod_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).enterMod_set(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof medPatternsListener ) ((medPatternsListener)listener).exitMod_set(this);
		}
	}

	public final Mod_setContext mod_set() throws RecognitionException {
		Mod_setContext _localctx = new Mod_setContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mod_set);
		 paraphrases.push("in mod_set"); 
		try {
			setState(181);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128); dose();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129); drt();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(130); freq();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(131); modes();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(132); dose();
				setState(133); freq();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(135); dose();
				setState(136); modes();
				setState(137); freq();
				setState(138); freq();
				}
				break;
